# game3

./: .gitignore  CMakeLists.txt  README.md
assets/: ship_small.aseprite
editables/: background.aseprite  background2.aseprite  big_boom.aseprite  boom.aseprite  boss.aseprite  enemy-fighter.aseprite  enemy_projectile.aseprite  enemy_ufo.aseprite  missile.aseprite  projectile.aseprite  projectile2.aseprite  ship.aseprite
include/: CollisionManager.hpp  Game.hpp  ResourceElements.hpp  ResourceElemets.hpp  ResourceManager.hpp  player.hpp
include/entities/: Background.hpp  Boss.hpp  EnemyFighter.hpp  EnemyFighterManager.hpp  EnemyMissile.hpp  EnemyProjectile.hpp  EnemyProjectileManager.hpp  EnemyUfo.hpp  EnemyUfoManager.hpp  Entity.hpp  Player.hpp  PlayerProjectile.hpp  Score.hpp  Spawnable.hpp
include/misc/: RlFormatters.hpp
src/: CollisionManager.cpp  Game.cpp  ResourceElements.cpp  ResourceManager.cpp  main.cpp
src/entities/: Background.cpp  Boss.cpp  EnemyFighter.cpp  EnemyFighterManager.cpp  EnemyMissile.cpp  EnemyProjectile.cpp  EnemyProjectileManager.cpp  EnemyUfo.cpp  EnemyUfoManager.cpp  Player.cpp  PlayerProjectile.cpp
